Chapter09/pod.env-var-references-in-shell.yaml
apiVersion: v1
kind: Pod
metadata:
  name: env-var-references-in-shell
spec:
  containers:
  - name: main
    image: alpine
    command:
    - sh
    - -c
    - 'echo "Hostname is $HOSTNAME. Hostname is ${HOSTNAME}"; sleep 9999999999'
