Chapter09/pod.kiada.envFrom.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kiada
spec:
  containers:
  - name: kiada
    image: luksa/kiada:0.4
    env:
    - name: POD_NAME
      value: kiada
    envFrom:
    - configMapRef:
        name: kiada-config
        optional: true
    ports:
    - name: http
      containerPort: 8080
