Chapter09/pod.kiada.hostname.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kiada
spec:
  hostname: custom-hostname
  containers:
  - name: kiada
    image: luksa/kiada:0.4
    imagePullPolicy: Always
    ports:
    - name: http
      containerPort: 8080
