Chapter09/pod.node-explorer.args.yaml
apiVersion: v1
kind: Pod
metadata:
  name: node-explorer
spec:
  volumes:
  - name: host-root
    hostPath:
      path: /
  containers:
  - name: node-explorer
    image: alpine
    command: 
    - sleep
    args:
    - "9999999999"
    volumeMounts:
    - name: host-root
      mountPath: /host
