Chapter09/pod.quiz.hostpath.kind.yaml
apiVersion: v1
kind: Pod
metadata:
  name: quiz
spec:
  nodeName: kind-worker
  volumes:
  - name: quiz-data
    hostPath:
      path: /tmp/quiz-data
  containers:
  - name: quiz-api
    image: luksa/quiz-api:0.1
    imagePullPolicy: IfNotPresent
    ports:
    - name: http
      containerPort: 8080
  - name: mongo
    image: mongo:7
    volumeMounts:
    - name: quiz-data
      mountPath: /data/db
