Chapter09/pod.quote.envFrom.yaml
apiVersion: v1
kind: Pod
metadata:
  name: quote
spec:
  volumes:
  - name: content
    emptyDir: {}
  containers:
  - name: quote-writer
    image: luksa/quote-writer:0.1
    imagePullPolicy: Always
    envFrom:
    - configMapRef:
        name: quote-config
        optional: true
      prefix: QUOTE_WRITER_
    volumeMounts:
    - name: content
      mountPath: /var/local/output
  - name: nginx
    image: nginx:alpine
    volumeMounts:
    - name: content
      mountPath: /usr/share/nginx/html
      readOnly: true
    ports:
    - name: http
      containerPort: 80
