Chapter09/pod.quote.volume.yaml
apiVersion: v1
kind: Pod
metadata:
  name: quote
spec:
  volumes:
  - name: quotes
    configMap:
      name: quotes-data
  - name: content
    emptyDir: {}
  containers:
  - name: quote-writer
    image: luksa/quote-writer:0.1
    env:
    - name: INPUT_FILE
      value: /quotes/book-quotes.txt
    volumeMounts:
    - name: quotes
      mountPath: /quotes
    - name: content
      mountPath: /var/local/output
  - name: nginx
    image: nginx:alpine
    volumeMounts:
    - name: content
      mountPath: /usr/share/nginx/html
      readOnly: true
    ports:
    - name: http
      containerPort: 80
